# wparse

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: frconfig.rs  main.rs
